Editorial revision to accessibility features

--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -237,7 +237,7 @@
                   <li>The button is hidden off-screen when it does not have keyboard focus, and becomes visible when users move focus to it with <kbd>Tab</kbd>.</li>
                   <li>
                     When not visible, the button is positioned off-screen, instead of being hidden with <code>display:none</code>, so it is always available to screen reader users.
-                    This is an important aspect of supporting users of screen readers that do not move the mouse or keyboard focus as the user is reading.
+                    This ensures the rotation control is accessible to people using a screen reader that does not move the mouse or keyboard focus when the user is moving its reading cursor.
                   </li>
                   <li>If the carousel is rotating, the button is labeled "Stop Automatic Slide Show," informing screen reader users that the slides are changing in addition to providing a way to stop the changes.</li>
                   <li>If the carousel is not rotating, the button is labeled "Start Automatic Slide Show."</li>
