removed aria-describedby from each slide

--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -75,7 +75,7 @@
 
                 <div id="myCarousel-items" class="carousel-items" aria-live="off">
 
-                  <div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 6" aria-describedby="carousel-label-1">
+                  <div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 6">
 
                     <div class="carousel-image">
                       <a href="#">
@@ -97,7 +97,7 @@
                     </div>  <!-- .carousel-caption -->
                   </div>   <!-- .item -->
 
-                  <div class="carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 6" aria-describedby="carousel-label-2">
+                  <div class="carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 6">
 
                     <div class="carousel-image">
                       <a href="#">
@@ -119,7 +119,7 @@
                     </div>  <!-- .carousel-caption -->
                   </div>   <!-- .item -->
 
-                  <div class="carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 6" aria-describedby="carousel-label-3">
+                  <div class="carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 6">
 
                     <div class="carousel-image">
                       <a href="#">
@@ -141,7 +141,7 @@
                     </div>  <!-- .carousel-caption -->
                   </div>   <!-- .item -->
 
-                  <div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 6" aria-describedby="carousel-label-4">
+                  <div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 6">
 
                     <div class="carousel-image">
                       <a href="#">
@@ -163,7 +163,7 @@
                     </div>  <!-- .carousel-caption -->
                   </div>   <!-- .item -->
 
-                  <div class="carousel-item" role="group" aria-roledescription="slide" aria-label="5 of 6" aria-describedby="carousel-label-5">
+                  <div class="carousel-item" role="group" aria-roledescription="slide" aria-label="5 of 6">
 
                     <div class="carousel-image">
                         <img src="images/britcomdavidslide__800x600.jpg" alt="British flag with WILL-TV host David Thiel."/>
@@ -182,7 +182,7 @@
                     </div>  <!-- .carousel-caption -->
                   </div>   <!-- .item -->
 
-                  <div class="carousel-item" role="group" aria-roledescription="slide" aria-label="6 of 6" aria-describedby="carousel-label-6">
+                  <div class="carousel-item" role="group" aria-roledescription="slide" aria-label="6 of 6">
 
                     <div class="carousel-image">
                       <a href="#">
@@ -435,17 +435,7 @@
                 </ul>
               </td>
             </tr>
-            <tr data-test-id="carousel-group-aria-describedby">
-              <td></td>
-              <th scope="row">
-                <code>aria-describedby="IDREF"</code>
-              </th>
-              <td>
-                <code>div.carousel-item</code>
-              </td>
-              <td>Provides additional information about the group by pointing to the content of the slide.</td>
-            </tr>
-              <tr data-test-id="carousel-button-start-disabled">
+            <tr data-test-id="carousel-button-start-disabled">
                 <td></td>
                 <th scope="row">
                   <code>aria-disabled="true"</code>
@@ -492,7 +482,7 @@
                 <td>
                   <ul>
                     <li>Identifies the content on the page that the button controls.</li>
-                    <li>Refers to the <code>div</code> that contains all the slides.</li> 
+                    <li>Refers to the <code>div</code> that contains all the slides.</li>
                   </ul>
                 </td>
               </tr>
