Fix typo found by @annabbott in review.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -603,7 +603,7 @@
             Optionally, an element wrapping the set of slide elements has <a href="#aria-atomic" class="property-reference">aria-atomic</a> set to <code>false</code>
             and <a href="#aria-live" class="property-reference">aria-live</a> set to:
             <ul>
-              <li><code>off</code>: ifthe the carousel is automatically rotating.
+              <li><code>off</code>: if the carousel is automatically rotating.
               <li><code>polite</code>: if the carousel is <strong>NOT</strong> automatically rotating.
             </ul>
           </li>
