Fixes for review and remove link to review issue.

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -38,15 +38,10 @@
   <main>
   <h1>Toolbar Example</h1>
   <p>
-    <strong>NOTE:</strong> This example has been redesigned and is now ready for final review before publication in APG Release 3.
-    Please provide feedback in
-    <a href="https://github.com/w3c/aria-practices/pull/950">pull request 950.</a>
-  </p>
-  <p>
     The following example of an editor toolbar implements the
     <a href="../../#toolbar">design pattern for toolbar</a>
     and demonstrates how a toolbar can group a set of interactive widgets into a single tab stop.
-    For illustrative and interoperability assessment purposes, this This implementation includes a diverse set of widgets, some of which may not be ordinarily grouped in the same toolbar.
+    For illustrative and interoperability assessment purposes, this implementation includes a diverse set of widgets, some of which may not be ordinarily grouped in the same toolbar.
     For instance, it includes both a checkbox and toggle buttons. In a typical implementation, the design would use either one or the other but not both.
     Similarly, the edit field is included to help simulate actual implementation and is not intended to represent an actual rich text editor.
     This example also illustrates the <a href="../../#kbd_roving_tabindex">roving tabindex method</a> for managing focus within a component.
